UI: Fix uneven menuitem padding on OSX
(integrated from master branch change 9.2.1-628-g27e5657 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/mac/menus.less
+++ b/src/chrome/komodo/skin/plat/mac/menus.less
@@ -11,6 +11,8 @@
 menu, menuitem
 {
     padding-left: 26px !important;
+    padding-top: 4px;
+    padding-bottom: 2px;
 
     .menu-iconic-icon:not([disabled])
     {
